Hacer que la cara sonría
He añadido las funciones correspondientes para que al pasar el ratón por encima de la cara se le cambie la sonrisa que tiene | por una más arqueada ),
y que, al dejar de pasar el ratón vuelva a su sonrisa normal |

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-        <title>sin título</title>
-        <link rel='stylesheet' href='css/main.css'>
+        <title>Cara sonriendo</title>
+        <link rel='stylesheet' href='css.css'>
     </head>
     <body>
         <div class='page'>
@@ -12,5 +12,18 @@
                 <div class='face'> :| </div>
             </div>
         </div>
+        <script>
+            var cara = document.getElementsByClassName('face')[0];
+            var cabeza = document.getElementsByClassName('head')[0];
+            
+            cabeza.onmouseout = function(){
+                cara.innerHTML = cara.innerHTML.replace('.', ':');
+                cara.innerHTML = cara.innerHTML.replace(')', '|'); //Para que al quitar el ratón de encima de la cara vuelva a la sonrisa normal que tenía
+            };
+            
+            cabeza.onmouseover = function(){
+                cara.innerHTML = cara.innerHTML.replace('|', ')') //Para hacer que sonría la carita
+            };
+        </script>
     </body>
 </html>
