--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8" />
         <meta name='viewport' content='width=device-width, initial-scale=1.0'>
         <title>Cara sonriendo</title>
-        <link rel='stylesheet' href='css.css'>
+        <link rel='stylesheet' href='css/main.css'>
     </head>
     <body>
         <div class='page'>
