añadido comentario para prueba ssh

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             };
             
             cabeza.onmouseout = function(){
-                cara.innerHTML = cara.innerHTML.replace('.', ':');
+                cara.innerHTML = cara.innerHTML.replace('.', ':'); //Con esto guiña un ojito
                 cara.innerHTML = cara.innerHTML.replace(')', '|'); //Para que al quitar el ratón de encima de la cara vuelva a la sonrisa normal que tenía
             };
             
