--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             
             cabeza.onmouseover = function(){
                 cara.innerHTML = cara.innerHTML.replace('|', ')') //Para hacer que sonría la carita
-            }; //Cambio para probar firma gpg
+            }; //Cambio para probar la firma gpg
         </script>
     </body>
 </html>
